# flow-state

./: .gitignore  ARCHITECTURE.md  Cargo.toml  PKGBUILD  README.md  spec.md
src/: app.rs  main.rs
src/core/: center.rs  config.rs  fonts.rs  latex.rs  mod.rs  text.rs  theme.rs  undo.rs
src/view/: decoration.rs  dialogs.rs  editor.rs  menu.rs  mod.rs  preview.rs  search.rs  sidebar.rs  style.rs
src/view/widget/: mod.rs  text_editor.rs
themes/: catppuccin-latte.toml  catppuccin-mocha.toml  gruvbox-dark.toml  kanagawa.toml  nord.toml  tokyo-night.toml
