[package]
name = "flow-state"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0.102"
dirs = "6.0.0"
fontdb = "0.23"
iced = { version = "0.14", features = ["markdown", "image", "tokio", "advanced"] }
image = "0.25.10"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["rt"] }
toml = "1.1.2"
walkdir = "2.5.0"
